2006-08-22  Hendrik Tews  <tews@debian>

	ELSA
	* changed enum value field to nativeint

	SEMANTIC
	* fixed another dense set bug

2006-08-21  Hendrik Tews  <tews@debian>

	* configure/Makefile cleanup; use elsa configure system in
	  semantic subdir

2006-08-21  Hendrik Tews  <tews@debian>

	AST
	* changed ocaml serialization to strict left-to-right order 

	SEMANTIC
	* changed dot generation to strict left-to-right evaluation:
	  graphs should be generated left-to-right
	* added D_attribute case

2006-08-17  Hendrik Tews  <tews@debian>

	ELSA
	* D_attribute hack: gnu_attribute_hack.ast extends
	  iDeclarator_type
	* reordered classes in cc.ast Declarator/IDeclarator are at the
	  end now
	* D_attribute methods are in gnu.cc, callbacks are in
	  ml_ctype_constructors 
	

2006-08-17  Hendrik Tews  <tews@debian>

	* changed to native ocaml compilation (still need to clean up
	  Makefiles) 

	ELSA
	* fixed ocaml_val init in STemplateArgument

	Semantic
	* ast_graph 36/40, regression tests finished
	  the remaining 4 functions are not connected

	* new regression test regtest-oast uses check-oast to typecheck
	  the ocaml ast
	* checked for all regression tests except big/*

2006-08-16  Hendrik Tews  <tews@debian>

	ELSA
	* ocaml_max_annotation for statistics
	* added 'a to sTemplateArgument

	SEMANTIC
	* adoption and small fixes
	
2006-08-16  Hendrik Tews  <tews@debian>

	* ast_graph (32/40)

2006-08-12  Hendrik Tews  <tews@debian>

	* solved recursion problem with dense_set.ml
	* ast_graph (24/40)

2006-08-11  Hendrik Tews  <tews@debian>

	* ast_graph (21/40), hit recursion problem

	ELSA
	* added string_of_ functions for some of the enums used in the ast

	SEMANTIC
	* ast_graph (20/40)

2006-08-10  Hendrik Tews  <tews@debian>

	ELSA
	* accessor functions for annotation type
	* string_of_declFlags

	SEMANTIC
	* further ast_graph hacking (5/40)

2006-08-09  Hendrik Tews  <tews@debian>

	ELSA
	* changed annotation type to int * int (id, addr >> 1)
	
	Semantic